SONAR-10132 Issue box does not fit on the screen on the Measures page

--- a/server/sonar-web/src/main/js/apps/component-measures/style.css
+++ b/server/sonar-web/src/main/js/apps/component-measures/style.css
@@ -120,6 +120,18 @@
   margin-right: 0;
 }
 
+.measure-details-viewer .issue-list {
+  /* no math, just a good guess */
+  min-width: 600px;
+  width: 800px;
+}
+
+@media (max-width: 1320px) {
+  .measure-details-viewer .issue-list {
+    width: calc(60vw - 80px);
+  }
+}
+
 .measure-view-select {
   width: 50px;
 }
